fix: scrollbars

--- a/character-creator-main/src/components/ButtonRow/ButtonRow.module.css
+++ b/character-creator-main/src/components/ButtonRow/ButtonRow.module.css
@@ -2,4 +2,12 @@
   margin-top: 16px;
   white-space: nowrap;
   overflow-x: auto;
+  padding: 16px 24px 24px 24px;
+  margin-left: -24px;
+  margin-right: -24px;
+  margin-bottom: -24px;
+}
+
+.buttonRow button:last-child {
+  margin-right: 24px;
 }
